--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,17 +18,17 @@
             android:exported="false">
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value=".Activities.Activities.LatestMessagesActivity" />
+            android:value=".Activities.Activities.UsersActivity" />
         </activity>
         <activity
             android:name=".Activities.Activities.NewMessageActivity"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activities.Activities.LatestMessagesActivity" />
+                android:value=".Activities.Activities.UsersActivity" />
         </activity>
         <activity
-            android:name=".Activities.Activities.LatestMessagesActivity"
+            android:name=".Activities.Activities.UsersActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.Activities.SignInActivity"
